force-app/main/default/objects/ysign__Yousign_Procedure__c/ysign__Yousign_Procedure__c.object-meta.xml
<CustomObject>
    <label>Yousign Procedure</label>
    <nameField>
        <label>Yousign_Procedure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yousign Procedures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>