force-app/main/default/objects/ysign__Yousign_Procedure__c/fields/ysign__Date_of_cancellation__c.field-meta.xml
<CustomField>
    <fullName>ysign__Date_of_cancellation__c</fullName>
    <label>Date of cancellation</label>
    <type>DateTime</type>
</CustomField>