force-app/main/default/objects/ysign__Yousign_Procedure__c/fields/ysign__Date_of_signature__c.field-meta.xml
<CustomField>
    <fullName>ysign__Date_of_signature__c</fullName>
    <label>Date of signature</label>
    <type>Date</type>
</CustomField>