force-app/main/default/objects/ysign__Yousign_Procedure__c/fields/ysign__Link_to_procedure__c.field-meta.xml
<CustomField>
    <fullName>ysign__Link_to_procedure__c</fullName>
    <formula>IF(
    ISBLANK(ysign__Yousign_Procedure_Id__c), 
    null,
    HYPERLINK( 
        IF($Setup.ysign__Yousign_setting__c.ysign__Environment__c=&apos;PRODUCTION&apos;, 
            &apos;https://webapp.yousign.com&apos;, 
            &apos;https://staging-app.yousign.com&apos;
        ) + 
        ysign__Yousign_Procedure_Id__c,
        &quot;Procedure&quot;, 
        &apos;YouSign&apos;) 
)</formula>
    <label>Link to procedure</label>
    <type>Text</type>
</CustomField>