force-app/main/default/objects/ysign__Yousign_Procedure__c/fields/ysign__ObjectReference__c.field-meta.xml
<CustomField>
    <fullName>ysign__ObjectReference__c</fullName>
    <label>Objectreference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>