force-app/main/default/objects/ysign__Yousign_Procedure__c/fields/ysign__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ysign__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Yousign Procedures</relationshipLabel>
    <relationshipName>Yousign_Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>