force-app/main/default/objects/ysign__Yousign_Procedure__c/fields/ysign__Ordered__c.field-meta.xml
<CustomField>
    <fullName>ysign__Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordered</label>
    <type>Checkbox</type>
</CustomField>