force-app/main/default/objects/ysign__Yousign_Procedure__c/fields/ysign__Signing_process_applicant__c.field-meta.xml
<CustomField>
    <fullName>ysign__Signing_process_applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signing process applicant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Yousign_Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>