force-app/main/default/objects/ysign__Yousign_Procedure__c/listViews/ysign__All.listView-meta.xml
<ListView>
    <fullName>ysign__All</fullName>
    <columns>NAME</columns>
    <columns>ysign__Status__c</columns>
    <columns>ysign__Signing_process_applicant__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>fr</language>
</ListView>